<resources>
    <string name="app_name">Cotação Fácil</string>
    <string name="type_it_email">Digite seu email</string>
    <string name="type_it_password">Digite sua senha</string>
    <string name="make_login">Fazer login</string>
    <string name="register">Registre-se</string>
    <string name="register_login">Digite sem email</string>
    <string name="register_create_password">Digite sua senha</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="btn_register">Registrar-se</string>
    <string name="empty_fild">Por favor, preencha todos os campos</string>
    <string name="password_lenght">Sua senha deve ter no mínimo 6 caracters</string>
    <string name="password_not_confirm">Senha não confirmada</string>
    <string name="login_existing">Este login já está sendo utilizado</string>
    <string name="login_success">Login feito com sucesso</string>
    <string name="register_not_success">Registro não realizado</string>
    <string name="email_already">Já existe um e-mail cadastrado em nosso sistema que corresponde a esse, por favor, faça o login ou click em esqueci a senha</string>
    <string name="register_success">Registro feito com sucesso</string>
    <string name="login_incomplete">Login não realizado</string>
    <string name="email_or_password_invald">Email ou senha inválido</string>
    <string name="not_internet">Você está sem conexão com a internet</string>
    <string name="email_existing">Este email já está sendo utilizado</string>
    <string name="training_empty">Este treino ainda não possui nenhum exercício</string>
    <string name="training">TREINO </string>
    <string name="description">Descrição: </string>
    <string name="add_training">Adicionar treino</string>
    <string name="create_training">Criar treino</string>
    <string name="name">Nome: </string>
    <string name="example">Exemplo: Bíceps e Costas</string>
    <string name="edti_training">Editar Treino</string>
    <string name="name_day">Treino de %s</string>
    <string name="login_not_realized">Não foi possível realizar seu login</string>
    <string name="atention">Atenção</string>
    <string name="yes">Sim</string>
    <string name="not">Não</string>
    <string name="add_photo">Adicionar foto</string>
    <string name="exercise">Exercício</string>
    <string name="tv_add_exercise">Adicionar exercicio</string>
    <string name="edt_note">"Observações: "</string>
    <string name="set_note_exercise">Digite observações sobre o treino</string>
    <string name="empty_image">Por favor, insira uma imagem do exercício</string>
    <string name="exercise_add_success">Exercício adicionado com sucesso</string>
    <string name="exercise_edited_success">Exercício editado com sucesso</string>
    <string name="create_exercise">Criar Exercício</string>
    <string name="edit_exercise">Editar Exercício</string>
    <string name="exercise_deleted_success">Exercicio deletado com sucesso</string>
    <string name="home">Home</string>
    <string name="choose_photo_using">Escolha a foto</string>
    <string name="action_close">Sair</string>
    <string name="camera">Usar a camera</string>
    <string name="gallery">Acessar a galeria</string>
    <string name="remove_photo">Remover foto</string>
    <string name="register_cnpj">Digite seu CNPJ</string>
    <string name="cnpj_invalid_exception">Por favor, insira um CNPJ válido</string>
    <string name="default_exception">Erro ao registrar</string>
    <string name="error">ERROR</string>
    <string name="buyers">Compradores</string>
    <string name="buyer">Comprador</string>
    <string name="provider">Fornecedor</string>
    <string name="user_type_emptu">Selecione a opção de negócio que deseja realizar</string>
    <string name="chance_type_user">Selecione um tipo de negócio abaixo:</string>
    <string name="cnpj_existing">Já existe um registro com esse CNPJ</string>
    <string name="open_price">Cotações abertas</string>
    <string name="items_stock">Itens do Estoque</string>
    <string name="info_corporation">Informações da empresa</string>
    <string name="partern">Parceiros</string>
    <string name="write_cnpj_partner">Digite o cnpj do fornecedor</string>
    <string name="add_new_partner">Procurar fornecedor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_possible_add_user">Não foi possível fazer o registro</string>
    <string name="owner_erro_message">Você não pode adicionar a si mesmo</string>
    <string name="cnpj_empty">Por favor, preencha o CNPJ</string>
    <string name="not_cnpj_find">Este CNPJ não foi encontrado</string>
    <string name="default_exception_find">Não foi possível fazer a busca</string>
    <string name="not_possibility_add_partner">Não foi possível enviar essa solicitação</string>
    <string name="partner_empty_message_error_buyer">Você ainda não possui nenhum fornecedor</string>
    <string name="request_send">Solicitação enviada</string>
    <string name="text_reject_partner">Tem certeza que deseja rejeitar a solicitação de %s?</string>
    <string name="text_to_give_up_partner">Tem certeza que desistir da solicitação de parceria com %s?</string>
    <string name="text_delete_partner">Tem certeza que deseja tirar %s dos seus parceiros? Ele não poderá mais participar das cotações</string>
    <string name="attention">Atenção</string>
    <string name="inpossible_reject_request_partner">Não foi possível rejeitar a solicitação agora, tente mais tarde</string>
    <string name="inpossible_delete_partner">Não foi possível deletar %s agora, tente mais tarde</string>
    <string name="request_reject_success">Solicitação deletada</string>
    <string name="request_accept_success">Solicitação aceita</string>
    <string name="inpossible_accept_request_partner">Não foi possível aceitar essa solicitação no momento</string>
    <string name="request_delete_success">Usuário deletado com sucesso</string>
    <string name="providers">Fornecedores</string>
    <string name="request">Solicitações</string>
    <string name="request_empty_message_error">Você não possui nenhuma solicitação</string>
    <string name="text_title_cancel_price">Sua parceria com %s foi excluída</string>
    <string name="text_title_delete_partner">Parceria finalizada</string>
    <string name="text_title_request_cancel_partner">Solicitação de parceria cancelada</string>
    <string name="text_request_cancel_partner">Sua solicitação de parceria com %s foi cancelada</string>
    <string name="text_title_request_partner">Solicitação de parceria enviada</string>
    <string name="text_title_received_partner">Solicitação de parceria recebida</string>
    <string name="text_send_request_partner">Você enviou uma solicitação de parceria para %s</string>
    <string name="text_title_request_rejected_partner">Solicitação de parceria rejeitada</string>
    <string name="text_request_rejected_partner">Você rejeitou a silicitação de parceria de %s</string>
    <string name="text_MY_request_rejected_partner">%S rejeitou sua silicitação de parceria</string>
    <string name="text_title_add_partner">Parceiro adicionado</string>
    <string name="text_title_add_price">Cotação iniciada</string>
    <string name="text_add_partner">%s foi adicionado aos seus parceiros</string>
    <string name="text_add_price">A cotação de código %s foi iniciada</string>
    <string name="text_delete_partner_adapter">Você deletou %s dos seus parceiros</string>
    <string name="text_receive_request_partner">%s enviou uma solicitação de parceria para vcoê</string>
    <string name="historic">Histórico</string>
    <string name="message_error_historic_empty">Você ainda não possui nenhum histórico</string>
    <string name="delete_historic">Excluir histórico</string>
    <string name="hint_name_product">Nome*</string>
    <string name="description_product_hint">Descrição</string>
    <string name="brand_hint">Marca</string>
    <string name="kg">Kg</string>
    <string name="liter">Litro(s)</string>
    <string name="cm">cm</string>
    <string name="meeters">metro(s)</string>
    <string name="box">Caixa(s)</string>
    <string name="others">Outros</string>
    <string name="type_measurements">Tipo de medida:</string>
    <string name="save_product">Salvar produto</string>
    <string name="add_product">Adicionar produto</string>
    <string name="product_add_success">Produto adicionado com sucesso</string>
    <string name="name_is_mandatory">O campo \"Nome\" é obrigatório</string>
    <string name="confirmation_save_product_data_empty">Tem certeza que deseja salvar o produto com campo(s) vazios?</string>
    <string name="quantity_measurements">Quantidade:</string>
    <string name="Stock">Estoque de produtos</string>
    <string name="search_hint_code_product">Digite o código do produto</string>
    <string name="search_hint_name_product">Digite o nome do produto</string>
    <string name="search_hint_brand_product">Digite a marca do produto</string>
    <string name="grams">Grama(s)</string>
    <string name="tons">Tonelada(s)</string>
    <string name="unity">Unidade(s)</string>
    <string name="bales">Fardo(s)</string>
    <string name="tins">Lata(s)</string>
    <string name="stock_empty_message">Você não possui nenhum produto no seu estoque</string>
    <string name="message_error_impossible_load_products_stock">Não foi possível carregar os produtos do Estoque</string>
    <string name="message_error_text_stock">Não foi possível carregar o estoque</string>
    <string name="products_empty_toast_add">Você ainda não possui produtos no estoque</string>
    <string name="products_empty_find">Nenhum produto encontrado</string>
    <string name="product">Produto :</string>
    <string name="price">Cotações</string>
    <string name="click_again_to_close">Aperte mais uma vez para sair</string>
    <string name="select_filter_find">Selecione o tipo de filtro da busca:</string>
    <string name="code_product">Código</string>
    <string name="name_product">Nome</string>
    <string name="brand_product">Marca</string>
    <string name="back">voltar</string>
    <string name="error_http_4229">Não foi possível acessar o servidor, tenta daqui alguns minutos</string>
    <string name="historic_deleted">Histórico deletado</string>
    <string name="error_delete_historic">Erro ao excluir histórico</string>
    <string name="all">Todos</string>
    <string name="favorites">Favoritos</string>
    <string name="edit_product">Editar produto</string>
    <string name="edited_product">Produto modificado com sucesso</string>
    <string name="impossible_delete_product">Não foi possível excluir o produto</string>
    <string name="product_deleted_success">Produto excluído com sucesso</string>
    <string name="delete_product">Tem certeza que deseja excluir esse produto?</string>
    <string name="email_null">Sem email</string>
    <string name="name_corporation_null">Nome não encontrado</string>
    <string name="fantasy_null">Nome não encontrado</string>
    <string name="fone_null">Telefone não encontrado</string>
    <string name="settings">Preferências</string>
    <string name="add_price">Criar cotação</string>
    <string name="create_price">Criar cotação</string>
    <string name="next">Próximio</string>
    <string name="partners">"Fornecedores: "</string>
    <string name="quantity_products">Qtd. de produtos:</string>
    <string name="qtd">Qtd.</string>
    <string name="tab_price_open">Cotações abertas</string>
    <string name="tab_price_all">Todas cotações</string>
    <string name="edit_price_example">Cotação 606999</string>
    <string name="produtos_price_title">Produtos da Cotação</string>
    <string name="cancel_price">Cancelar Cotação</string>
    <string name="finish_price">Fechar cotação</string>
    <string name="select_option_camera_gallery">Selecione uma opção</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Galeria</string>
</resources>