<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:itemBackground="@color/item_bottom_navigation"

    >

    <group>
        <item
            android:id="@+id/homeFragmentProvider"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/partnerBuyerFragment"
            android:icon="@drawable/ic_partner"
            android:title="@string/partern" />
        <item
            android:id="@+id/historyProviderFragment"
            android:icon="@drawable/ic_history"
            android:title="@string/historic" />

        <item
            android:id="@+id/priceProviderFragment"
            android:icon="@drawable/ic_price"
            android:title="@string/price" />
    </group>
</menu>