<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_option_camera_gallery"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewCamera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_type_user"
        android:padding="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/imageViewGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:srcCompat="@drawable/camera" />

    <ImageView
        android:id="@+id/imageViewGallery"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:padding="8dp"
        android:background="@drawable/shape_type_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewCamera"
        app:layout_constraintTop_toTopOf="@+id/imageViewCamera"
        app:srcCompat="@drawable/ic_gallery" />

    <TextView
        android:id="@+id/textViewCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_camera"
        app:layout_constraintEnd_toEndOf="@+id/imageViewCamera"
        app:layout_constraintStart_toStartOf="@+id/imageViewCamera"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCamera" />

    <TextView
        android:id="@+id/textViewGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_gallery"
        app:layout_constraintEnd_toEndOf="@+id/imageViewGallery"
        app:layout_constraintStart_toStartOf="@+id/imageViewGallery"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGallery" />
</androidx.constraintlayout.widget.ConstraintLayout>
