<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/arrow"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/edit_price_example" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textproductsPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:text="@string/produtos_price_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_quantityProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="6dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:text="@string/qtd"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewAllProducts"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewAllProducts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAllProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/tvProductQuantityLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textproductsPrice"
        tools:itemCount="2"
        tools:listitem="@layout/item_table_product" />

    <TextView
        android:id="@+id/tvProductQuantityLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/quantity_products"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvCreationDateLabel" />

    <TextView
        android:id="@+id/tvProductQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tvProductQuantityLabel"
        app:layout_constraintTop_toTopOf="@id/tvProductQuantityLabel"
        tools:text="23" />

    <TextView
        android:id="@+id/tvCreationDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tvProductQuantityLabel"
        app:layout_constraintBottom_toTopOf="@id/tvClosureTypeLabel"
        tools:text="Criada em 15/10/2013 10:14" />

    <TextView
        android:id="@+id/tvClosureTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/partners"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tvCreationDateLabel"
        app:layout_constraintBottom_toTopOf="@id/tvClosingDateLabel" />

    <TextView
        android:id="@+id/tvQuantityProvider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/tvClosureTypeLabel"
        app:layout_constraintTop_toTopOf="@id/tvClosureTypeLabel"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="352dp"
        tools:text="6" />

    <TextView
        android:id="@+id/tvClosingDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:minLines="2"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_finish_price"
        app:layout_constraintStart_toStartOf="@id/tvProductQuantityLabel"
        tools:text="Encerra em 10/05/2023 10:14" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish_price"
        style="@style/PrimaryButtonMaterial"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/dimen_1"
        android:visibility="gone"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/finish_price"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_price"
        style="@style/SecundaryButtonMaterial"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/dimen_1"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/cancel_price"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>